jenkinstest/myweb.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: myweb
  name: myweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myweb
  template:
    metadata:
      labels:
        app: myweb
    spec:
      containers:
      - image: registry.cn-hangzhou.aliyuncs.com/scm-oms/luxsun:$IMAGE_ID 
        imagePullPolicy: Always
        name: myweb
      imagePullSecrets:
      - name: aliyun-secret

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: myweb
  name: myweb
spec:
  ports:
  - nodePort: 32223
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myweb
  type: NodePort
