jenkinstest/scm-appointment-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: scm-appointment-service
spec:
  ports:
  - port: 20015
  selector:
    app: scm-appointment-deployment

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: scm-appointment-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: scm-appointment-deployment
    matchExpressions:
      - {key: tier, operator: In, values: [scm-appointment-deployment]}
  template:
    metadata:
      labels:
        app: scm-appointment-deployment
        tier: scm-appointment-deployment
    spec:
      containers:
      - name: scm-appointment-deployment
        image: registry.cn-hangzhou.aliyuncs.com/scm-oms/scm.appointment:$IMAGE_ID
        ports:
        - containerPort: 20015
      imagePullSecrets:
        - name: aliyun-secret
