jenkinstest/scm-fileserver-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: scm-fileserver-service
spec:
  ports:
  - port: 5002
  selector:
    app: scm-fileserver-deployment

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: scm-fileserver-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: scm-fileserver-deployment
    matchExpressions:
      - {key: tier, operator: In, values: [scm-fileserver-deployment]}
  template:
    metadata:
      labels:
        app: scm-fileserver-deployment
        tier: scm-fileserver-deployment
    spec:
      containers:
      - name: scm-fileserver-deployment
        image: registry.cn-hangzhou.aliyuncs.com/scm-oms/webfileserver:$IMAGE_ID
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5002
      imagePullSecrets:
        - name: aliyun-secret
