jenkinstest/scm-omsbilling-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: scm-omsbilling-service
spec:
  ports:
  - port: 20007
  selector:
    app: scm-omsbilling-deployment

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: scm-omsbilling-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: scm-omsbilling-deployment
    matchExpressions:
      - {key: tier, operator: In, values: [scm-omsbilling-deployment]}
  template:
    metadata:
      labels:
        app: scm-omsbilling-deployment
        tier: scm-omsbilling-deployment
    spec:
      containers:
      - name: scm-omsbilling-deployment
        image: registry.cn-hangzhou.aliyuncs.com/scm-oms/scm.omsbilling:$IMAGE_ID
        ports:
        - containerPort: 20007
      imagePullSecrets:
        - name: aliyun-secret
