jenkinstest/scm-uuid-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: scm-uuids-service
spec:
  ports:
  - port: 20005
  selector:
    app: scm-uuids-deployment

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: scm-uuids-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: scm-uuids-deployment
    matchExpressions:
      - {key: tier, operator: In, values: [scm-uuids-deployment]}
  template:
    metadata:
      labels:
        app: scm-uuids-deployment
        tier: scm-uuids-deployment
    spec:
      containers:
      - name: scm-uuids-deployment
        image: registry.cn-hangzhou.aliyuncs.com/scm-oms/scm.uuids:$IMAGE_ID
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 20005
      imagePullSecrets:
        - name: aliyun-secret
