jenkinstest/Traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-nginx-traefik
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: nginx.apps.clu.kube.com
    http:
      paths:
      - path: /  
        backend:
          serviceName: nginx
          servicePort: 80
  - host: confluence.apps.clu.kube.com
    http:
      paths:
      - path: /  
        backend:
          serviceName: confluence-service
          servicePort: 8090
      - path: /synchrony
        backend:
          serviceName: confluence-service
          servicePort: 8091
  - host: jenkins.apps.clu.kube.com
    http:
      paths:
      - path: /  
        backend:
          serviceName: jenkins-release
          servicePort: 8080
